# req-compile

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  MODULE.bazel  README.rst  WORKSPACE.bazel  WORKSPACE.bzlmod  defs.bzl  example compilation.txt  extensions.bzl  pylintrc  pyproject.toml  pyrightconfig.json  repositories.bzl  repositories_transitive.bzl  reqs.bzl  requirements.37.txt  requirements.in  requirements.txt  sample  setup.py  test-requirements.in  test-requirements.txt  update-docs.sh  version.bzl
.bcr/: source.template.json  (+1 more)
docs/: BUILD.bazel  docs.md
private/: BUILD.bazel  annotation.bzl  annotation_utils.bzl  compiler.bzl  compiler.py  compiler_rule.bzl  copier.py  remote_compiler.bzl  remote_compiler.py  remote_orchestrator.py  reqs_repo.bzl  sdist.bzl  sdist_compiler.py  sdist_repo.bzl  sdist_requirements.in  sdist_requirements.txt  solution_tester.py  transition.bzl  utils.bzl  whl_repo.bzl
private/examples/multiplatform_py_test/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  hello_test.py  requirements.linux.txt  requirements.macos.txt  requirements.windows.txt
private/tests/: BUILD.bazel  test_repositories.bzl  test_repositories_1.bzl  test_repositories_2.bzl  test_repositories_3.bzl  test_repositories_transitive.bzl
private/tests/annotations/: BUILD.bazel  annotations.py  annotations_test.py  annotations_test_deps.bzl  numpy.patch  numpy_consumer_test.cc  requirements.linux.txt  requirements.macos.txt  requirements.windows.txt
private/tests/cross_platform/: BUILD.bazel  cross_platform.py  cross_platform_test.py  cross_platform_test_utils.bzl  requirements.linux.txt  requirements.macos.txt  requirements.windows.txt
private/tests/find_links/: BUILD.bazel  BUILD.find_links.bazel  compiler_wrapper.py  extension.bzl  find_links_test.py  find_links_test_repo.bzl  requirements.in  requirements.txt
private/tests/incremental/: BUILD.bazel  requirements.in  requirements.windows.txt
private/tests/internal_deps/: BUILD.bazel
private/tests/package_aliases/: BUILD.bazel  MODULE.bazel  dep_checker.py  requirements.in  requirements.txt  setuptools.py
private/tests/pip_parse_compat/: BUILD.bazel  compiler_wrapper.py  pip_parse_compat_test_deps.bzl  pip_parse_compat_test_deps_install.bzl  requirements.txt
private/tests/platlib/: BUILD.bazel  platlib_test.py  requirements.linux.txt  requirements.macos.txt  requirements.windows.txt
private/tests/sdist/: BUILD.bazel  requirements.txt  sdist_test.py
private/tests/simple/: BUILD.bazel  requirements.txt  simple_test.py
private/tests/transitive_ins/: BUILD.bazel  requirements.in  requirements.txt  transitive_ins_test.py
private/tests/unit/: BUILD.bazel  parse_lockfile_test_suite.bzl
private/tests/version_test/: BUILD.bazel  version_test.py
private/tests/workspace_user/: BUILD.bazel  WORKSPACE.bazel  hello_test.py
private/tools/: BUILD.bazel  gazelle_python.yaml
req_compile/: BUILD.bazel  __main__.py  blacklist.py  candidates.py  cmdline.py  compile.py  config.py  containers.py  dists.py  errors.py  extractor.py  filename.py  hash.py  importhook.py  metadata.py  utils.py  versions.py
req_compile/metadata/: BUILD.bazel  __init__.py  dist_info.py  errors.py  extractor.py  metadata.py  patch.py  pyproject.py  source.py
req_compile/repos/: BUILD.bazel  __init__.py  findlinks.py  multi.py  pypi.py  repository.py  solution.py  source.py
req_compile/stubs/pkg_resources/: __init__.pyi
scripts/: BUILD.bazel  compare_with_pip_compile.py  compile-repl.py  performance.py  pypi_compare.py  run_dists.py  run_with_importhook.py  strip.py
tests/: BUILD.bazel  METADATA-bizarre-extra  METADATA-extra-space  METADATA-implementation-marker  METADATA-two-names  conftest.py  solutionfile_extras.txt  solutionfile_extras_not_on_req.txt  solutionfile_fuzzywuzzy_extras.txt  test_cmdline.py  test_compile.py  test_containers.py  test_dists.py  test_egg_info.py  test_extractor.py  test_filename.py  test_integration.py  test_merge_requirements.py  test_metadata.py  test_no_setup_py.py  test_pypi.py  test_repositories.py  test_solution.py  test_utils.py  test_versions.py
tests/early-violated/: a-5.0.0.METADATA  y-4.0.0.METADATA  z-1.0.0.METADATA
tests/extra-violated/: a-5.0.0.METADATA  b-4.0.0.METADATA  x-0.9.0.METADATA  x-1.1.0.METADATA  y-4.0.0.METADATA  z-1.0.0.METADATA
tests/flask-like-walkback/: flask-1.1.4.METADATA  flask-2.0.0.METADATA  flask-2.0.1.METADATA  jinja2-2.11.3.METADATA  jinja2-3.0.1.METADATA  werkzeug-1.0.1.METADATA  werkzeug-2.0.1.METADATA
tests/gather_indices/: requirements.in
tests/gather_indices/tools/: tool_requirements.in
tests/local-tree/framework/: setup.py
tests/local-tree/user1/: setup.py
tests/local-tree/user2/: setup.py
tests/local-tree/util/: setup.py
tests/metadata/: BUILD.bazel  pex-listing.txt  test_dist_info.py  test_source_metadata.py
tests/multi/: x-0.9.0.METADATA  x-1.0.0.METADATA  y-4.0.0.METADATA  y-5.0.0.METADATA  z-1.0.0.METADATA
tests/no-setup-py/: README.md  setup.cfg
tests/normal/: a-1.0.0.METADATA  b.METADATA  c-1.0.0.METADATA  d.METADATA  e-0.9.0.METADATA  f-1.0.0.METADATA  test.METADATA
tests/real/: pylint-1.9.4.METADATA
tests/repeat-violated/: x-1.1.0.METADATA  x-1.2.0.METADATA
tests/repos/: BUILD.bazel  bad_solutionfile.txt  extra_only_solution.txt  extra_only_solution_no_extras.txt  garbage.html  numpy.html  numpy.whl-contents  requests_kerberos_solution.txt  requests_security_solution.txt  solutionfile.txt  solutionfile_extras.txt  solutionfile_urls.txt  test_findlinks.py  test_multi.py  test_pypi.py  test_solution.py  test_source.py
tests/setuptools-dynamic/: BUILD.bazel  pyproject.toml  test_setuptools_dynamic.py
tests/source-packages/PyYAML-5.1/: setup.py
tests/walk-back/: a-3.6.METADATA  a-4.0.METADATA  b-1.0.METADATA  b-1.1.METADATA
tests/walkback-depth/: a-1.0.0.METADATA  x-1.0.0.METADATA  x-2.0.0.METADATA
tools/: BUILD.bazel  buildifier_runner.py  gazelle_python.yaml  rules_python_gazelle_plugin_windows.patch
tools/constraints/: BUILD.bazel
(+113 files in other folders)
