load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "MODULE.bazel",
    "requirements.in",
    "test-requirements.in",
    "version.bzl",
    "defs.bzl",
])

alias(
    name = "buildifier",
    actual = "//tools:buildifier",
)

alias(
    name = "buildifier.check",
    actual = "//tools:buildifier.check",
)

alias(
    name = "gazelle",
    actual = "//tools:gazelle",
    tags = ["manual"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//private:annotation",
        "//private:reqs_repo",
        "//private:whl_repo",
    ],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//visibility:public"],
)
