workspace(name = "req_compile")

load("//:repositories.bzl", "req_compile_dependencies")

req_compile_dependencies()

load("//:repositories_transitive.bzl", "req_compile_transitive_dependencies")

req_compile_transitive_dependencies()

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python311",
    python_version = "3.11",
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("//private/tests:test_repositories_1.bzl", "test_dependencies_1")

test_dependencies_1()

load("//private/tests:test_repositories_2.bzl", "test_dependencies_2")

test_dependencies_2()

load("//private/tests:test_repositories_3.bzl", "test_dependencies_3")

test_dependencies_3()
