workspace(name = "rules_req_compile")

load("//:repositories.bzl", "req_compile_dependencies")

req_compile_dependencies()

load("//:repositories_transitive.bzl", "req_compile_transitive_dependencies")

req_compile_transitive_dependencies()

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python311",
    python_version = "3.11",
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("//private/tests:test_repositories_1.bzl", "test_dependencies_1")

test_dependencies_1()

load("//private/tests:test_repositories_2.bzl", "test_dependencies_2")

test_dependencies_2()

load("//private/tests:test_repositories_3.bzl", "test_dependencies_3")

test_dependencies_3()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "buildifier_prebuilt",
    sha256 = "7f85b688a4b558e2d9099340cfb510ba7179f829454fba842370bccffb67d6cc",
    strip_prefix = "buildifier-prebuilt-7.3.1",
    urls = [
        "http://github.com/keith/buildifier-prebuilt/archive/7.3.1.tar.gz",
    ],
)

load("@buildifier_prebuilt//:deps.bzl", "buildifier_prebuilt_deps")

buildifier_prebuilt_deps()

bazel_skylib_workspace()

load("@buildifier_prebuilt//:defs.bzl", "buildifier_prebuilt_register_toolchains")

buildifier_prebuilt_register_toolchains()
