load("@rules_python//python:defs.bzl", "py_binary")

exports_files(
    [
        "sdist_requirements.in",
        "sdist_requirements.txt",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "copier",
    srcs = ["copier.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "compiler",
    srcs = ["compiler.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//req_compile",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "solution_tester",
    srcs = ["solution_tester.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":compiler",
        "@rules_python//python/runfiles",
    ],
)
