load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files(
    [
        "sdist_requirements.in",
        "sdist_requirements.txt",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "copier",
    srcs = ["copier.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "compiler_bin",
    srcs = ["compiler.py"],
    main = "compiler.py",
    visibility = ["//visibility:public"],
    deps = [
        "//req_compile",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "solution_tester",
    srcs = ["solution_tester.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":compiler_bin",
        "@rules_python//python/runfiles",
    ],
)

bzl_library(
    name = "annotation",
    srcs = ["annotation.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["@rules_cc//cc:bzl_srcs"],
)

bzl_library(
    name = "reqs_repo",
    srcs = ["reqs_repo.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":utils",
        ":whl_repo",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "sdist",
    srcs = ["sdist.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":reqs_repo"],
)

bzl_library(
    name = "whl_repo",
    srcs = ["whl_repo.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":annotation_utils",
        ":utils",
    ],
)

bzl_library(
    name = "annotation_utils",
    srcs = ["annotation_utils.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "compiler",
    srcs = ["compiler.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//:__subpackages__"],
)
