load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files(
    [
        "sdist_requirements.in",
        "sdist_requirements.txt",
        "remote_compiler.py",
        "remote_orchestrator.py",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "remote_compiler_bin",
    srcs = ["remote_compiler.py"],  # keep: main must also be listed in srcs
    main = "remote_compiler.py",
)

py_binary(
    name = "remote_orchestrator",
    srcs = ["remote_orchestrator.py"],
    visibility = ["//:__subpackages__"],
    deps = ["@rules_python//python/runfiles"],
)

py_binary(
    name = "copier",
    srcs = ["copier.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "compiler",
    srcs = ["compiler.py"],
    main = "compiler.py",
    visibility = ["//visibility:public"],
    deps = [
        "//req_compile:cmdline",
        "//req_compile:compile",
        "//req_compile:containers",
        "//req_compile:dists",
        "//req_compile:errors",
        "@rules_python//python/runfiles",
    ],
)

py_binary(
    name = "solution_tester",
    srcs = ["solution_tester.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":compiler",
        "@rules_python//python/runfiles",
    ],
)

bzl_library(
    name = "annotation",
    srcs = ["annotation.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@rules_cc//cc:bzl_srcs",  # keep: this is the correct import for our version of rules_cc
    ],
)

bzl_library(
    name = "reqs_repo",
    srcs = ["reqs_repo.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":utils",
        ":whl_repo",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "sdist",
    srcs = ["sdist.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":reqs_repo"],
)

bzl_library(
    name = "whl_repo",
    srcs = ["whl_repo.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":annotation_utils",
        ":utils",
    ],
)

bzl_library(
    name = "annotation_utils",
    srcs = ["annotation_utils.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "compiler_rule",
    srcs = ["compiler_rule.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "remote_compiler",
    srcs = ["remote_compiler.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":compiler_rule",
        ":transition",
        "@rules_venv//python/venv:bzl_lib",
    ],
)

bzl_library(
    name = "transition",
    srcs = ["transition.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "sdist_compiler",
    srcs = ["sdist_compiler.py"],
    visibility = ["//:__subpackages__"],
)
