load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "req_compile",
    srcs = glob(["**/*.py"]),
    data = [
        "py.typed",
    ] + glob([
        "**/*.pyi",
    ]),
    imports = [".."],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = [
        "@req_compile_deps//appdirs",
        "@req_compile_deps//overrides",
        "@req_compile_deps//packaging",
        "@req_compile_deps//requests",
        "@req_compile_deps//setuptools",
        "@req_compile_deps//toml",
        "@req_compile_deps//typing_extensions",
        "@req_compile_deps//wheel",
    ],
)
