load("@buildifier_prebuilt//:rules.bzl", "buildifier_test")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary", "gazelle_test")
load("@req_compile_deps//:defs.bzl", top_level_wheel = "all_requirements_wheels")
load("@req_compile_test_annotations//:defs.bzl", test_annotations_wheels = "all_requirements_wheels")
load("@req_compile_test_platlib//:defs.bzl", test_platlib_wheels = "all_requirements_wheels")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")

exports_files(
    [
        "rules_python_gazelle_plugin_windows.patch",
    ],
    visibility = ["//visibility:public"],
)

# This rule fetches the metadata for python packages we depend on. That data is
# required for the gazelle_python_manifest rule to update our manifest file.
modules_mapping(
    name = "modules_map",
    wheels = top_level_wheel + test_annotations_wheels + test_platlib_wheels,
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "req_compile_deps",
    requirements = [
        "//3rdparty:requirements.linux_x86_64.txt",
        "//private/tests/annotations:requirements.linux.txt",
        "//private/tests/platlib:requirements.linux.txt",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
    visibility = ["//:__pkg__"],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
        "@rules_python_gazelle_plugin//python:python",
    ],
)

gazelle_test(
    name = "gazelle_test",
    gazelle = ":gazelle_bin",
    workspace = "//:MODULE.bazel",
)

py_binary(
    name = "buildifier",
    srcs = ["buildifier_runner.py"],
    data = [
        "@buildifier_prebuilt//:buildifier",
    ],
    env = {
        "BUILDIFIER_BIN_RLOCATION": "$(rlocationpath @buildifier_prebuilt//:buildifier)",
    },
    main = "buildifier_runner.py",
    visibility = ["//:__pkg__"],
    deps = ["@rules_python//python/runfiles"],
)

buildifier_test(
    name = "buildifier_test",
    diff_command = "diff -u",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "diff",
    no_sandbox = True,
    visibility = ["//:__pkg__"],
    workspace = "//:MODULE.bazel",
)
