load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "test_repositories_1",
    srcs = ["test_repositories_1.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:defs",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "test_repositories_2",
    srcs = ["test_repositories_2.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:defs",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "test_repositories_3",
    srcs = ["test_repositories_3.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [],
)
