load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@req_compile_deps//:defs.bzl", top_level_wheel = "all_requirements_wheels")
load("@req_compile_test_annotations//:defs.bzl", test_annotations_wheels = "all_requirements_wheels")
load("@req_compile_test_platlib//:defs.bzl", test_platlib_wheels = "all_requirements_wheels")
load("@rules_black//python/black:defs.bzl", "py_black_toolchain")
load("@rules_pytest//python/pytest:defs.bzl", "py_pytest_toolchain")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")

# This rule fetches the metadata for python packages we depend on. That data is
# required for the gazelle_python_manifest rule to update our manifest file.
modules_mapping(
    name = "modules_map",
    wheels = top_level_wheel + test_annotations_wheels + test_platlib_wheels,
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "req_compile_deps",
    requirements = [
        "//3rdparty:requirements.linux.txt",
        "//private/tests/annotations:requirements.linux.txt",
        "//private/tests/platlib:requirements.linux.txt",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
    visibility = ["//:__pkg__"],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@rules_python_gazelle_plugin//python:python",
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

buildifier(
    name = "buildifier",
    diff_command = "diff -u",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    lint_warnings = ["all"],
    visibility = ["//:__pkg__"],
)

buildifier(
    name = "buildifier.check",
    diff_command = "diff -u",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "diff",
    visibility = ["//:__pkg__"],
)

py_black_toolchain(
    name = "py_black_toolchain",
    black = "@req_compile_deps//:black",
)

toolchain(
    name = "black_toolchain",
    toolchain = ":py_black_toolchain",
    toolchain_type = "@rules_black//python/black:toolchain_type",
)

py_library(
    name = "pytest_deps",
    deps = [
        "//tests:conftest",
        "@req_compile_deps//:pytest",
        "@req_compile_deps//:pytest_mock",
    ],
)

py_pytest_toolchain(
    name = "py_pytest_toolchain",
    pytest = ":pytest_deps",
)

toolchain(
    name = "pytest_toolchain",
    toolchain = ":py_pytest_toolchain",
    toolchain_type = "@rules_pytest//python/pytest:toolchain_type",
    visibility = ["//visibility:public"],
)
